# JoelC

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  gen.bat
ExcelAddIn1/: ExcelAddIn1.sln
ExcelAddIn1/ExcelAddIn1/: ExcelAddIn1.csproj  ExcelAddIn1_TemporaryKey.pfx  ThisAddIn.cs
ExcelAddIn1/ExcelAddIn1/Properties/: AssemblyInfo.cs
cmake/: CMakeLists.txt  WGCompiler_msvc.cmake  WGConfiguration_generic_app_test.cmake  WGConfiguration_generic_app_test_all.cmake  WGConfiguration_generic_app_test_deploy.cmake  WGConfiguration_generic_app_test_no_unit.cmake  WGConfiguration_wgs_unified_editor.cmake  WGQtCommon.cmake  WGTFAppMacros.cmake  WGTFMacros.cmake  WGToolsProject.cmake
cmake/external_modules/: MayaConfig.cmake  PerforceConfig.cmake  Qt5Config.cmake
cmake/projects/core/: WGToolsCore.cmake  WGToolsCoreTests.cmake
cmake_module/: AJCompiler_clang.cmake  AJCompiler_msvc.cmake  AJGlobalCompilerAndLinkerOptions.cmake  AJPlatformOptions.cmake
engine/: CMakeLists.txt  graphics.cpp  graphics.h  main.cpp  win_main.cpp
engine/input/: keyboard_input.cpp  keyboard_input.h
engine/render/: camera.cpp  camera.h  directx3d11.cpp  directx3d11.h  graphics.cpp  graphics.h  model.cpp  model.h  shader.cpp  shader.h
engine/res/shader/: color.ps  color.vs
engine/system/: win_system.cpp  win_system.h
ysc/: CMakeLists.txt
